Fix: restore gradient card headers and ensure burger menu icon is visible in dark mode

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
                 <div class="card flex-fill shadow-sm mb-4">
                     <div class="row g-0 align-items-center">
                         <div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
-                            <img src="assets/images/what-is-diversity-img.jpeg" class="img-fluid rounded-end w-100" alt="Diversity illustration" style="object-fit:contain;">
+                            <img src="assets/images/what-is-diversity-img.jpeg" width="400" height="300" class="img-fluid rounded-end w-100" alt="Diversity illustration" style="object-fit:contain;">
                         </div>
                         <div class="col-12 col-md-7">
                             <div class="card-body">
-                                <h3 id="section-header" class="card-title section-header-gradient">What is Diversity?</h3>
+                                <h3 class="card-title section-header-gradient">What is Diversity?</h3>
                                 <ul class="list-group list-group-flush mb-0">
                                     <li id="text-hover" class="list-group-item">Brings together people from different backgrounds, cultures, and experiences.</li>
                                     <li id="text-hover" class="list-group-item">Celebrates unique perspectives, talents, and ways of thinking.</li>
@@ -131,7 +131,7 @@
                         </div>
                         <div class="col-12 col-md-7">
                             <div class="card-body">
-                                <h3 id="section-header" class="card-title section-header-gradient">Why is Diversity & Inclusion Important?</h3>
+                                <h3 class="card-title section-header-gradient">Why is Diversity & Inclusion Important?</h3>
                                 <ul class="list-group list-group-flush mb-0">
                                     <li id="text-hover" class="list-group-item">Leads to better ideas and problem-solving. When people with different experiences work together, they find creative solutions.</li>
                                     <li id="text-hover" class="list-group-item">Improves teamwork and morale. People feel happier and more motivated when they know they belong.</li>
@@ -163,7 +163,7 @@
                         </div>
                         <div class="col-12 col-md-7 d-flex flex-column justify-content-center order-2 order-md-1">
                             <div class="card-body">
-                                <h3 id="section-header" class="card-title mb-4 section-header-gradient">Simple Tips for Promoting Diversity & Inclusion</h3>
+                                <h3 class="card-title mb-4 section-header-gradient">Simple Tips for Promoting Diversity & Inclusion</h3>
                                 <ol class="list-group list-group-numbered mb-0">
                                     <li id="text-hover" class="list-group-item"><strong>Listen actively:</strong> Value every voice and perspective.</li>
                                     <li id="text-hover" class="list-group-item"><strong>Challenge bias:</strong> Notice and address stereotypes.</li>
