Fix: resolved duplicate ID errors, added section heading for accessibility, and ensured HTML validation

--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
                             <div class="card-body">
                                 <h3 class="card-title section-header-gradient">What is Diversity?</h3>
                                 <ul class="list-group list-group-flush mb-0">
-                                    <li id="text-hover" class="list-group-item">Brings together people from different backgrounds, cultures, and experiences.</li>
-                                    <li id="text-hover" class="list-group-item">Celebrates unique perspectives, talents, and ways of thinking.</li>
-                                    <li id="text-hover" class="list-group-item">Includes visible differences (race, gender, age) and invisible ones (beliefs, interests).</li>
-                                    <li id="text-hover" class="list-group-item">Creates richer conversations and learning opportunities.</li>
-                                    <li id="text-hover" class="list-group-item">Helps us understand and respect each other's stories.</li>
-                                    <li id="text-hover" class="list-group-item">Prepares us to work and live in a global society.</li>
-                                    <li id="text-hover" class="list-group-item">Builds stronger, more creative, and resilient communities.</li>
-                                    <li id="text-hover" class="list-group-item">Encourages us to value and include everyone.</li>
+                                    <li class="list-group-item text-hover">Brings together people from different backgrounds, cultures, and experiences.</li>
+                                    <li class="list-group-item text-hover">Celebrates unique perspectives, talents, and ways of thinking.</li>
+                                    <li class="list-group-item text-hover">Includes visible differences (race, gender, age) and invisible ones (beliefs, interests).</li>
+                                    <li class="list-group-item text-hover">Creates richer conversations and learning opportunities.</li>
+                                    <li class="list-group-item text-hover">Helps us understand and respect each other's stories.</li>
+                                    <li class="list-group-item text-hover">Prepares us to work and live in a global society.</li>
+                                    <li class="list-group-item text-hover">Builds stronger, more creative, and resilient communities.</li>
+                                    <li class="list-group-item text-hover">Encourages us to value and include everyone.</li>
                                 </ul>
                             </div>
                         </div>
@@ -133,15 +133,15 @@
                             <div class="card-body">
                                 <h3 class="card-title section-header-gradient">Why is Diversity & Inclusion Important?</h3>
                                 <ul class="list-group list-group-flush mb-0">
-                                    <li id="text-hover" class="list-group-item">Leads to better ideas and problem-solving. When people with different experiences work together, they find creative solutions.</li>
-                                    <li id="text-hover" class="list-group-item">Improves teamwork and morale. People feel happier and more motivated when they know they belong.</li>
-                                    <li id="text-hover" class="list-group-item">Reflects the real world and helps everyone feel welcome. Diverse groups prepare us for working and living in a global society.</li>
-                                    <li id="text-hover" class="list-group-item">Encourages learning and growth. Exposure to new perspectives helps us learn and grow as individuals.</li>
-                                    <li id="text-hover" class="list-group-item">Reduces discrimination and bias. Inclusive environments challenge stereotypes and promote fairness.</li>
-                                    <li id="text-hover" class="list-group-item">For example, companies with diverse teams often perform better and schools that value inclusion help all students succeed.</li>
-                                    <li id="text-hover" class="list-group-item">Boosts innovation and adaptability. Organizations that embrace diversity are better equipped to respond to change and new challenges.</li>
-                                    <li id="text-hover" class="list-group-item">Strengthens community and trust. Inclusion builds stronger relationships and a sense of belonging for everyone involved.</li>
-                                    <li id="text-hover" class="list-group-item">Promotes equal opportunities. When everyone is included, people have a fair chance to contribute and succeed.</li>
+                                    <li class="list-group-item text-hover">Leads to better ideas and problem-solving. When people with different experiences work together, they find creative solutions.</li>
+                                    <li class="list-group-item text-hover">Improves teamwork and morale. People feel happier and more motivated when they know they belong.</li>
+                                    <li class="list-group-item text-hover">Reflects the real world and helps everyone feel welcome. Diverse groups prepare us for working and living in a global society.</li>
+                                    <li class="list-group-item text-hover">Encourages learning and growth. Exposure to new perspectives helps us learn and grow as individuals.</li>
+                                    <li class="list-group-item text-hover">Reduces discrimination and bias. Inclusive environments challenge stereotypes and promote fairness.</li>
+                                    <li class="list-group-item text-hover">For example, companies with diverse teams often perform better and schools that value inclusion help all students succeed.</li>
+                                    <li class="list-group-item text-hover">Boosts innovation and adaptability. Organizations that embrace diversity are better equipped to respond to change and new challenges.</li>
+                                    <li class="list-group-item text-hover">Strengthens community and trust. Inclusion builds stronger relationships and a sense of belonging for everyone involved.</li>
+                                    <li class="list-group-item text-hover">Promotes equal opportunities. When everyone is included, people have a fair chance to contribute and succeed.</li>
                                 </ul>
                             </div>
                         </div>
@@ -165,17 +165,17 @@
                             <div class="card-body">
                                 <h3 class="card-title mb-4 section-header-gradient">Simple Tips for Promoting Diversity & Inclusion</h3>
                                 <ol class="list-group list-group-numbered mb-0">
-                                    <li id="text-hover" class="list-group-item"><strong>Listen actively:</strong> Value every voice and perspective.</li>
-                                    <li id="text-hover" class="list-group-item"><strong>Challenge bias:</strong> Notice and address stereotypes.</li>
-                                    <li id="text-hover" class="list-group-item"><strong>Celebrate differences:</strong> Appreciate cultures, traditions, and backgrounds.</li>
-                                    <li id="text-hover" class="list-group-item"><strong>Use inclusive language:</strong> Choose words that welcome everyone.</li>
-                                    <li id="text-hover" class="list-group-item"><strong>Support equal opportunities:</strong> Make sure everyone has a fair chance.</li>
-                                    <li id="text-hover" class="list-group-item"><strong>Educate yourself:</strong> Learn about others’ experiences and cultures.</li>
-                                    <li id="text-hover" class="list-group-item"><strong>Speak up:</strong> Address unfair treatment respectfully.</li>
-                                    <li id="text-hover" class="list-group-item"><strong>Practice empathy:</strong> Try to understand others’ feelings.</li>
-                                    <li id="text-hover" class="list-group-item"><strong>Encourage collaboration:</strong> Work together to achieve common goals.</li>
-                                    <li id="text-hover" class="list-group-item"><strong>Mentor and support:</strong> Help others grow and feel included.</li>
-                                    <li id="text-hover" class="list-group-item"><strong>Promote accessibility:</strong> Make spaces and resources available to all.</li>
+                                    <li class="list-group-item text-hover"><strong>Listen actively:</strong> Value every voice and perspective.</li>
+                                    <li class="list-group-item text-hover"><strong>Challenge bias:</strong> Notice and address stereotypes.</li>
+                                    <li class="list-group-item text-hover"><strong>Celebrate differences:</strong> Appreciate cultures, traditions, and backgrounds.</li>
+                                    <li class="list-group-item text-hover"><strong>Use inclusive language:</strong> Choose words that welcome everyone.</li>
+                                    <li class="list-group-item text-hover"><strong>Support equal opportunities:</strong> Make sure everyone has a fair chance.</li>
+                                    <li class="list-group-item text-hover"><strong>Educate yourself:</strong> Learn about others’ experiences and cultures.</li>
+                                    <li class="list-group-item text-hover"><strong>Speak up:</strong> Address unfair treatment respectfully.</li>
+                                    <li class="list-group-item text-hover"><strong>Practice empathy:</strong> Try to understand others’ feelings.</li>
+                                    <li class="list-group-item text-hover"><strong>Encourage collaboration:</strong> Work together to achieve common goals.</li>
+                                    <li class="list-group-item text-hover"><strong>Mentor and support:</strong> Help others grow and feel included.</li>
+                                    <li class="list-group-item text-hover"><strong>Promote accessibility:</strong> Make spaces and resources available to all.</li>
                                 </ol>
                             </div>
                         </div>
@@ -188,6 +188,7 @@
     <div class="w-100 clearfix mb-5"></div>
     <!-- Resources Section: Explore More Resources Card -->
     <section id="resources" class="container mb-5 pt-3">
+        <h2 class="section-header-gradient mb-4">Resources</h2>
         <div class="row justify-content-center">
             <div class="col-12 col-lg-8 d-flex">
                 <div class="card w-100 h-100 shadow-sm resources-card">
